# longest-word

./: Dockerfile  Makefile  pyproject.toml  wsgi.py
.github/workflows/: .python-ci.yml
longest_word/: game.py
static/: style.css
tests/: test_game.py
