[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <ogiles@email.com>"]
readme = "README.md"
packages = [{include = "longest_word"}]

[tool.poetry.dependencies]
python = "^3.8"
nose = "^1.3.7"
pylint = "^2.15.4"
astroid = "^2.12.11"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
